--- a/src/App.css
+++ b/src/App.css
@@ -62,6 +62,12 @@ input, textarea, select {
     border: 2px solid #1c1c1c;
     outline: none;
 }
+.PageButton {
+    border: 2px solid #1c1c1c;
+    outline: none;
+    padding: 10px 22px;
+    margin-right: 15px;
+}
 .NotesBoxWrap {
     height: 100%;
     display: flex;
@@ -79,9 +85,13 @@ input, textarea, select {
     overflow-y: auto;
     border-left: 10px solid #f6bdc8;
 }
+.NoteDetail {
+    overflow-wrap: break-word;
+}
 .ItemWrap {
     background-color: #ebe4f9;
     padding: 15px;
     margin-bottom: 15px;
     border-radius: 5px;
+    overflow-wrap: break-word;
 }
