--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,14 @@
+.landscapeDisplay {
+    display: flex;
+    background-color: #1c1c1c;
+    color: white;
+    height: 100vh;
+}
+.landscapeDisplay :only-child {
+    width: 100%;
+    text-align: center;
+    align-self: center;
+}
 .Container {
     display: flex;
     flex-direction: column;
